<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:id="@+id/id_drawerlayout"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent" >
    
	<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@android:id/tabhost"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    <LinearLayout
	    	android:orientation="vertical"
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent">
	    	<FrameLayout 
	    		android:id="@android:id/tabcontent"
	    		android:layout_width="fill_parent"
	    		android:layout_height="0.0dip"
	    		android:layout_weight="1.0"/>
	    	<TabWidget 
	    		android:id="@android:id/tabs"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="0.0"
	    		android:visibility="gone"/>
	    	<RadioGroup
	    		android:id="@+id/main_tab"
	    		android:background="#F9F9F9"
	    		android:orientation="horizontal"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center_vertical"
	    		android:layout_gravity="bottom">
	    		<RadioButton 
	    			android:layout_marginTop="2.0dip"
	    			android:text="@string/main_home"
	    			android:drawableTop="@drawable/icon_1_n"
	    			android:id="@+id/radio_button0"
	    			style="@style/main_tab_bottom"
	    			/>
	    		<RadioButton 
	    			android:layout_marginTop="2.0dip"
	    			android:text="@string/menu_search"
	    			android:drawableTop="@drawable/icon_4_n"
	    			android:id="@+id/radio_button3"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_marginTop="2.0dip"
	    			android:text="@string/main_add"
	    			android:drawableTop="@drawable/icon_3_n"
	    			android:id="@+id/radio_button2"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_marginTop="2.0dip"
	    			android:text="@string/main_news"
	    			android:drawableTop="@drawable/icon_2_n"
	    			android:id="@+id/radio_button1"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_marginTop="2.0dip"
	    			android:text="@string/more"
	    			android:drawableTop="@drawable/icon_5_n"
	    			android:id="@+id/radio_button4"
	    			style="@style/main_tab_bottom"/>
	    	</RadioGroup>
	    </LinearLayout>
	</TabHost>
	<LinearLayout  
        android:id="@+id/id_drawer"  
        android:layout_width="360dp"  
        android:layout_height="match_parent"  
        android:layout_gravity="start"  
        android:background="#F1F1F1"  
        android:orientation="vertical" >
	    <LinearLayout
	        android:id="@+id/drawer_usermsg"
	        android:layout_width="match_parent"  
	        android:layout_height="120dp"
	        android:layout_marginTop="50dp"
	        android:orientation="horizontal">
	    	<cn.bmob.imdemo.ui.CircleImageView
	    	    android:id="@+id/drawer_userhead"
		        android:layout_width="80dp"  
		        android:layout_height="80dp"
		        android:layout_margin="30dp"
		        android:src="@drawable/user"/>
	    	<LinearLayout 
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:orientation="vertical">
	    	    <TextView 
	    	        android:id="@+id/drawer_username"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_marginTop="50dp"
		    	    android:textSize="20dp"
		    	    android:text="Mr.SKY"/>
	    	    <TextView 
	    	        android:id="@+id/drawer_lanmsg"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:textSize="10dp"
		    	    android:text="EN > CN"/>
	    	</LinearLayout>
    	</LinearLayout>
    	 <ListView  
            android:id="@+id/id_lv"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:divider="#999999"  
            android:dividerHeight="1dp" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>